# 40

./: README..md  README.md  readme.md
DevSecOps и безопасность кода/DependaSentinel/: action.yml  dockerfile.dockerfile  readme.md  requirements.txt
DevSecOps и безопасность кода/SecretCanary/: dockerfile.dockerfile  pyproject.toml  readme.md
DevSecOps и безопасность кода/SecretCanary/github/workflows/: canary.yml
DevSecOps и безопасность кода/SecretCanary/src/: embedder.py  generator.py  main.py  notifier.py  watcher.py
Endpoint & EDR для малого бизнеса/NanoEDR/: docker-compose.yml  readme.md
Endpoint & EDR для малого бизнеса/NanoEDR/agent/: Cargo.toml  dockerfile.dockerfile
Endpoint & EDR для малого бизнеса/NanoEDR/agent/src/: collector.rs  config.rs  main.rs  uplink.rs
Endpoint & EDR для малого бизнеса/NanoEDR/agent/src/linux/: ebpf.rs
Endpoint & EDR для малого бизнеса/NanoEDR/agent/src/windows/: etw.rs
Endpoint & EDR для малого бизнеса/USB-Warden/: package.json  readme.md
Обучение и фишинг-тесты/Cyber-Habits Tracker/: docker-compose.yml  package.json  readme.md
Обучение и фишинг-тесты/PhishQuest-GPT/: docker-compose.yml  package.json  readme.md
Пользовательские (B2C) мобильные и десктоп-решения/PhishSnap/: docker-compose.yaml  dockerfile.dockerfile  pubspec.yaml  readme.md
Управление паролями и секретами/passmap/: dockerfile.dockerfile  package.json  readme.md
Управление паролями и секретами/secret-flight/: package.json  readme.md
Управление паролями и секретами/teamvault-lite/: package.json  readme.md
(+75 files in other folders)
