[package]
name = "nanoedr"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = ["Win32_System_Diagnostics_Etw"] }